--- a/Index.html
+++ b/Index.html
@@ -119,17 +119,27 @@
                                             </div>
                                             <!-- Add to cart button -->
                                             <div class="row">
-                                                <div class="col-12 ">
+                                                <div class="col-12 d-grid gap-2 mx-auto">
                                                     <a
                                                         v-if="CanAddToCart(item)"
                                                         v-on:click="AddToCartBtn(item)"
                                                         href="#"
                                                         class="btn btn-primary"
+                                                        aria-pressed="false"
                                                     >
                                                         ADD TO CART
                                                     </a>
+                                                    <a
+                                                        v-else="CanAddToCart(item) === 0"
+                                                        v-on:click="AddToCartBtn(item)"
+                                                        href="#"
+                                                        class="text-danger disabled"
+                                                       
+                                                    >
+                                                        Out Of Stock!
+                                                    </a>
                                                 </div>
-                                            </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -298,7 +308,7 @@
         let app = new Vue({
   el: "#app",
   data: {
-    sitename: "After School", // Name of the site
+    sitename: "Kids Schooling", // Name of the site
     Product: [], // Array to hold product data
     ShowProduct: true, // Boolean to toggle between product and checkout view
     Cart: [], // Array to hold items in the cart
@@ -334,7 +344,7 @@
   created: function () {
     // Fetch product data from the server when the app is created
     try {
-      fetch("http://localhost:3000/collection/products").then(function (res) {
+      fetch("https://coursework-2.onrender.com/collection/products").then(function (res) {
         res.json().then(function (json) {
           app.Product = json;
           console.log(app.Product);
@@ -420,7 +430,7 @@
       };
 
       // Send the new order to the server
-      fetch("http://localhost:3000/collection/orders", {
+      fetch("https://coursework-2.onrender.com/collection/orders", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
@@ -441,7 +451,7 @@
       this.Cart = [];
 
       // Refresh the product data from the server
-      fetch("http://localhost:3000/collection/products").then((res) =>
+      fetch("https://coursework-2.onrender.com/collection/products").then((res) =>
         res.json().then((json) => {
           app.Product = json;
           console.log("🚀 ~ ProcessOrder ~ app.Product = json:", app.Product);
@@ -452,7 +462,7 @@
     UpdateProduct(id, spaceValue) {
       // Update the product inventory on the server
       fetch(
-        `http://localhost:3000/collection/products/${id}/reduce/availableSpace/${spaceValue}`,
+        `https://coursework-2.onrender.com/collection/products/${id}/reduce/availableSpace/${spaceValue}`,
         {
           method: "PUT",
           headers: {
@@ -469,7 +479,7 @@
 
     ServerImage(img) {
       // Construct the full URL for an image
-      const NodeServerUrl = "http://localhost:3000";
+      const NodeServerUrl = "https://coursework-2.onrender.com";
       const Image = img.split("/").pop().trim();
       const FullPath = NodeServerUrl + "/" + Image;
       return FullPath;
@@ -478,7 +488,7 @@
     Searching() {
       // Perform a search based on the search input
       let searchTerm = this.search.toLowerCase();
-      fetch("http://localhost:3000/collection/products/search", {
+      fetch("https://coursework-2.onrender.com/collection/products/search", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
@@ -497,7 +507,7 @@
     ShowHomePageBtn: function () {
       // Toggle the view between the product list and the checkout page
       try {
-        fetch("http://localhost:3000/collection/products").then(function (res) {
+        fetch("https://coursework-2.onrender.com/collection/products").then(function (res) {
           res.json().then(function (json) {
             app.Product = json;
             console.log(app.Product);
